fix: text align

--- a/_sass/components/homepage/_text-cards.scss
+++ b/_sass/components/homepage/_text-cards.scss
@@ -3,6 +3,7 @@
 .textcards-section {
   flex-direction: column;
   align-items: center;
+  text-align: center;
 
   @media screen and (min-width: 1408px) {
     max-width: 1440px;
